--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         
     </div>
     <div class="dark-btn">
-
+        <h1>Dark mode</h1>
     </div>
     <section id="service">
         <div class="container">
